# vectorify

./: .gitignore  README.md  pyproject.toml
vectorify/: cli.py  docs.py  svg.py  utils.py
